attempt 2 to fix interactive scrolling by adding z-index to sticky graphic and increasing z-index on text boxes

--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ a {
     justify-content: center;
     align-items: center;
     align-content: space-evenly;
+    z-index: 1;
 }
 
 .dot {
